<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gird Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="searchHint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="advSearchOption">Advance Search Options</string>
    <string name="imgSize">Image Size</string>
    <string name="colorFilter">Color Filter</string>
    <string name="imgType">Image Type</string>
    <string name="siteFilter">Site Filter</string>
    <string name="save">Save</string>

    <string-array name="strArrImgSize">
        <item>icon</item>
        <item>medium</item>
        <item>large</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="strArrColorFilter">
        <item>black</item>
        <item>blue</item>
		<item>brown</item>
		<item>gray</item>
		<item>green</item>
		<item>orange</item>
		<item>pink</item>
		<item>purple</item>
		<item>red</item>
		<item>teal</item>
		<item>white</item>
		<item>yellow</item>		        
    </string-array>
    
    <string-array name="strArrImgType">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    
</resources>
